2006-09-06 [colin]	1.79.2cvs17

	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcal_prefs.c
	* src/vcal_prefs.h
	* src/vcalendar.c
		Implement free/busy support (export and import)
		The Full Corporate Potential is now 
		unleashed on Sylpheed-Claws!
		

2006-09-01 [wwp]	1.79.2cvs16

	* commitHelper
		sync w/ commitHelper in sylpheed-claws module:
		use CVSEDITOR env. var. if set.

2006-08-29 [colin]	1.79.2cvs15

	* src/plugin.c
		Complete 1.79.2cvs10 - Follow 
		2.4.0cvs98 API change for sending mail
	* src/vcalendar.c
		Implement scroll

2006-08-29 [paul]	1.79.2cvs14

	* .cvsignore
	* configure.ac
	* src/icaltime_as_local.h
	* src/plugin.c
	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcal_prefs.c
	* src/vcalendar.c
		remove references to pluginconfig.h,
		the file ceased to exist

	* po/zh_CN.po
		fix broken plural forms

2006-08-28 [paul]	1.79.2cvs13

	* po/stamp-po
		add missing file

2006-08-28 [paul]	1.79.2cvs12

	* configure.ac
	* src/Makefile.am
	* src/plugin.c
		fix setting of localedir
		Thanks to Colin

2006-08-28 [paul]	1.79.2cvs11

	* configure.ac
	* po/Makefile.in.in
	* po/Makevars
	* src/plugin.c
		require autoconf 2.60, enabling building
		with gettext 0.15 (gettext 0.14.x build still
		possible). Replace Makefiles with versions
		from gettext 0.15.

2006-08-27 [colin]	1.79.2cvs10

	* configure.ac
	* src/vcal_manager.c
		Follow 2.4.0cvs98 API change for sending mail

2006-08-27 [colin]	1.79.2cvs9

	* src/plugin.c
		Implement plugin_provides()

2006-08-25 [paul]	1.79.2cvs8

	* src/vcalendar.c
		fix build warnings

2006-08-23 [colin]	1.79.2cvs7

	* configure.ac
	* src/plugin.c
	* src/vcalendar.c
		Implement get_selection(), which will return
		either the selected part of Description, the
		complete Description, or the Summary, depen-
		ding on what's available.

2006-08-21 [colin]	1.79.2cvs6

	* src/vcal_folder.c
	* src/vcal_manager.c